2000-06-14  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/pop3/camel-pop3-folder.c (get_message_by_uid): Took out the
	filter code ( we already filter in camel_pop3_command_get_additional_data)

	* camel-folder.c (init): Updated: a separator is now a char* rather than
	a single char because IMAP can have a string for a directory separator.
	Also, since IMAP does not begin with a directory separator, there is a new
	argument (path_begins_with_sep) which decides if a directory should begin
	with a directory separator.

	* providers/imap/camel-imap-store.c (imap_create): Since, on connect,
	Camel tries to create INBOX (which already exists on every IMAP provider)
	we can return TRUE when the folder name is "INBOX".

	* providers/vee/camel-vee-folder.c (vee_init): Updated.

	* providers/imap/camel-imap-folder.c (camel_imap_folder_new): Updated.

	* providers/mbox/camel-mbox-store.c (get_folder): Updated.

	* providers/mbox/camel-mbox-folder.c (mbox_init): Updated.

	* providers/pop3/camel-pop3-folder.c (camel_pop3_folder_new): Updated.

2000-06-14  Dan Winship  <danw@helixcode.com>

	* providers/mbox/camel-mbox-summary.c (camel_mbox_summary_sync):
	Renamed from camel_mbox_summary_expunge. Takes a gboolean saying
	whether to expunge or just sync the mbox file. Change some
	g_errors to g_warning so we don't abort. Make the quick
	X-Evolution updating code lseek around correctly. Update the
	mbox mtime in the summary file even in the quick case.

	* providers/mbox/camel-mbox-summary.h: make
	CAMEL_MESSAGE_FOLDER_NOXEV not conflict with
	CAMEL_MESSAGE_FOLDER_FLAGGED defined in camel-mime-message.h

	* providers/mbox/camel-mbox-folder.c (mbox_close): call
	camel_mbox_summary_sync to save flag state if not expunging.
	(mbox_expunge): Update for camel_mbox_summary_expunge rename.

2000-06-13  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-store.c (camel_imap_store_open): 
	(camel_imap_store_close): Added.